objects/ssot__OtherEmissionsFactorSet__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Ch4GlblWarmingPotNumber__c</fullName>
        <label>CH4 Global Warming Potential</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmissionFactorDataSourceName__c</fullName>
        <label>Emissions Factor Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmissionFactorUpdateYear__c</fullName>
        <label>Emissions Factor Update Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Other Emissions Factor Set Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__N2oGlblWarmingPotNumber__c</fullName>
        <label>N2O Global Warming Potential</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RefrigerantLeakageRtInKgItKwh__c</fullName>
        <label>Data Center Refrigerant Leakage Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RefrigerantLeakageRtInKgM2__c</fullName>
        <label>Refrigerant Leakage Rate (kg/m2)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RefrigerantLeakageRtInKgSqft__c</fullName>
        <label>Refrigerant Leakage Rate (kg/sqft)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldLockDtastUpdtForRec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Dataset Update For Record</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>